VERSION "4.3.98"
added pragma once to all .h files, removed trailing whitespace for .cc files
other changes for development tools

VERSION "4.3.97"
a lot of changes to the fonts and the formatting of baroque lute fonts

VERSION "4.3.96"
added short squat baroque f for Probert
fixed flags where thin or other flag is specified for baroque, might need more work
also worked on underbars and multiple f characters and brisee sign

VERSION "4.3.95"
for Jan - improved bar numbers, including changing them and letting the user
select a number font to use.
use of dot . as a barline that is counted by bar numbering (unless the dot 
is followed by an X)
also added way to set first measure number

added r for *L* character for repeat and made it and the other repeat character 
a bit smaller

VERSION "4.3.94"
fix top margins - add win.h to include stuff to quiet Visual Studio compiler

VERSION "4.3.93"
in tab_p.cc duplicated f->flag_flag to inside big loop when line starts with $
because flag style was not being set in time to affect inter system spacing

VERSION "4.3.92"
added -no_space_after_note flag
added -no_space_before_note flag

VERSION "4.3.91"
correction to -h (convert) option
silenced a few compilation error warnings
in $arg=val allow for quoted-printable $arg=3Dval
made additions to get_tab_file to handle CContent statements in the file

VERSION "4.3.90"

added note name output to midi-dump.

VERSION "5.3.89"

VERSION "4.3.88"
fix lute.mf to make spanish "perfect" time sig work again

VERSION "4.3.87"
add  after-ornaments to the flag line
fixed a bug in the print size of 1200dpi PS 

VERSION "4.3.86"
fix ^03 error where the caret shoed up in the final document
Also fix tie at flag level

VERSION "4.3.85"
add SPANISH for music and score conversion or numeric spanish tab

VERSION "4.3.84"  January 9 2015
fix score for the N10 character

VERSION "4.3.83"  September 8 2014
fix del signe \0376  and added file name to midi file in -midi
fix ^ ornament after e
