@@ -121,7 +121,7 @@ MISC = README blute.mf blute9.mf blute8.mf blute85.mf \
 	simple.tab \
 	update.pl .gitignore
 
-DISTFILE = lute_tab4.3.98.tar.gz
+DISTFILE = lute_tab4.3.99.tar.gz
 
 distrib:	 ${DISTFILE}
 
