@@ -1374,7 +1374,7 @@ unsigned int pdf_print::do_text_stream(i_buf *i_b,  struct font_list *f_a[],
   fprintf(stderr,"pdf_print: do_text_stream: bytes dec %d oct %o\n",
 	  bytes, bytes);
 
-  memset (s_buf, 0, sizeof(s_buf));
+  memset (s_buf, 0, /* sizeof(s_buf) */ STREAM);
   strcpy (s_buf, "BT\n/F13 12 Tf\n 288 520 Tda\n (ABC) Tj\nET \n");
   scount = strlen(s_buf);
   bytes += pr_out->PutStringC("6 0 obj\n<</Length ");
